<resources>
    <string name="app_name">Quick Inventory</string>
    <string name="turn_flash_on_off">Turn Flash On/Off</string>
    <string name="barcode">Barcode</string>
    <string name="submit">Submit</string>
    <string name="qty">Qty</string>
    <string name="logoDes">Inventory App Logo</string>
    <string name="loginBtn">Login</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="qr">QR</string>
    <string name="imgRecognition">Image Recognition</string>
    <string name="prodRec">Item Recognition</string>
    <string name="companyName">CompanyName</string>
    <string name="titleProductsAct">Products</string>
</resources>