<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorCard"

    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColorHint="@color/colorCard">

        <EditText
            android:id="@+id/etBarcode"
            android:enabled="false"
            android:textColor="@color/colorPrimaryText"
            android:background="@color/colorBackground"
            android:hint="@string/barcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorCard">

        <EditText
            android:id="@+id/etQty"
            android:textColor="@color/colorPrimaryText"
            android:background="@color/colorBackground"
            android:hint="@string/qty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        android:text="@string/submit"
        android:insetTop="0dp"
        app:cornerRadius="0dp"
        app:backgroundTint="@color/colorAccent"
        android:insetBottom="0dp"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        app:iconGravity="textStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>